# OG-Core

./: .buildinfo  .git-blame-ignore-revs  .gitattributes  .gitignore  .jenkins_wrapper.sh  .readthedocs.yml  .regression.txt  .regression.yml  .travis.yml  BYUAEI_MacroModelDescr.docx  CHANGELOG.md  JenkinsFile  Jenkinsfile  MANIFEST.in  Makefile  PSL_catalog.json  README.md  README.rst  TAX_FILER_IMPLEMENTATION_SUMMARY.md  aggregates.html  changelog.yaml  changelog_entry.yaml  citations.bib  codecov.yml  contributor_guide.html  demographics.html  elliptical_u_est.html  environment.yml  execute.html  firm.html  fiscal.html  genindex.html  get_micro_data.html  household.html  income.html  index.html  objects.inv  output_plots.html  output_tables.html  parameter_plots.html  (+19 more)
.github/: FUNDING.yml  dependabot.yml  get-changelog-diff.sh  is-version-number-acceptable.sh  publish-git-tag.sh
Data/: Household Income 2011.xlsx
Draft/: DynScoreMacro.bib  DynScoreMacro.bib.bak  DynScoreMacro.tex
Model Writeup/: AEIBYUDyn.aux  AEIBYUDyn.bak  AEIBYUDyn.bbl  AEIBYUDyn.bib  AEIBYUDyn.bib.bak  AEIBYUDyn.blg  AEIBYUDyn.idx  AEIBYUDyn.lof  AEIBYUDyn.lot  AEIBYUDyn.out  AEIBYUDyn.pdfsync  AEIBYUDyn.tex  AEIBYUDyn.toc  AEIBYUDyn_Bib.bib  Adding_Firms.tex  Brief Description of the BYU.docx  Eqm_description.aux  Eqm_description.tex  Extended Consumers Problem.tex  Extended Firms Problem.tex  FinancialIntermediary.ilg  FinancialIntermediary.tex  Firms_description.aux  Firms_description.tex  Government_description.aux  Government_description.out  Government_description.tex  HittingCBOTargets.ilg  Household_description.aux  Household_description.tex  Integrating_Micro_Macro.aux  Integrating_Micro_Macro.out  Integrating_Micro_Macro.pdfsync  Integrating_Micro_Macro.tex  Model features.docx  Model_soln.aux  Model_soln.tex  Notation_Guide.aux  Notation_Guide.out  Notation_Guide.pdfsync  (+36 more)
NBERtaxsim/: known.sas  knprob.lst  knprob.sas  taxcalc.sas
Outside Documentation/: Background.docx  Statistical Matching.ppt
Papers/: Summers_review_Piketty.txt
Presentations/: ZCCFE_presentation.tex
Python/: HH_prob_jmd.py  MANIFEST.in  SS.py  SS2.py  SS_init_init.py  SS_jmd.py  SS_old_income.py  SS_test.py  TPI.py  TxFuncEst_baseline.pkl  TxFuncEst_baseline_w_mtrs2.pkl  TxFuncEst_policy.pkl  demographics.py  execute.py  execute_large.py  execute_small.py  firm_focs.py  gen_inc.py  hh_focs.py  hh_focs_jmd.py  income.py  income_old.py  labor_data.py  method2comparison.docx  payroll.py  postprocess.py  run_baseline.py  run_everything.py  run_many_ogusa_parallel.py  run_ogusa.py  run_ogusa_baseline.py  run_ogusa_ice.py  run_ogusa_policy.py  run_ogusa_serial.py  run_simulation.py  run_simulation_from_json.py  run_small.py  run_small_baseline.py  run_tax_experiments.py  setup.py  (+7 more)
_modules/: index.html
_sources/: index.rst.txt  wealth.rst.txt
calibration/: calibrate.py  labor.py  wealth.py
compconfig/: setup.py
conda.recipe/: build.sh  meta.yaml
content/: OGCore_references.html  citations.html
cs-config/: install.sh  setup.py  write_output.py
docs/: Compile Sphinx Directions.txt  Makefile  README.md  make_params.py  make_vars.py
dynamic/: README.rst  default_full_parameters.json
examples/: TAX_FILER_README.md  example-diffs.bat  expected_ogcore_example_output.csv  multi_industry_example.py  run_ogcore_example.py  run_ogcore_nonfiler_example.py  run_sparse_FOC_jac_compare.py
firms/: Firm_Parameters_FullertonRogers.xlsx  firm_funcs_static.py  main.py  ssfuncs_static.py
microtaxest/: MicroTaxEst.bib  txfunc.py
ogcore/: OGcorePlots.mplstyle  SS.py  TPI.py  __init__.py  _version.py  aggregates.py  tax.py  (+19 more)
(+1629 files in other folders)
